// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MediaGallery should download fileUrl 1`] = `
<body
  style="padding-right: 0px; overflow: hidden;"
>
  <div
    aria-hidden="true"
  />
  <div
    class=""
    role="presentation"
    style="position: fixed; z-index: 1300; right: 0px; bottom: 0px; top: 0px; left: 0px;"
  >
    <div
      aria-hidden="true"
      class="backdrop"
      style="z-index: -1; position: fixed; right: 0px; bottom: 0px; top: 0px; left: 0px; background-color: rgba(0, 0, 0, 0.5);"
    />
    <div
      data-test="sentinelStart"
      tabindex="0"
    />
    <div
      class="ColorPair-module_ColorPair__-7yq5 ColorPair-module_ColorPair--white__ON4XF"
      style="opacity: 1; webkit-transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
      tabindex="-1"
    >
      <div
        class="Dialog-module_Dialog__mjp2p Dialog-module_Dialog--bg-white__VB5k7 Dialog-module_Dialog--width-lg__B9QT4 modal makeStyles-paper-85"
      >
        <div
          class="Dialog-module_header__-B9IJ"
        >
          <button
            aria-label="Close"
            class="MuiButtonBase-root MuiIconButton-root iconButtonStyles-root-97 iconButtonStyles-medium-103 iconButtonStyles-text-99 Dialog-module_iconButton__hWdbD"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiIconButton-label"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
                />
              </svg>
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
        </div>
        <div
          class="Carousel-module_wrapper__PjLbh"
        >
          <div
            class="Carousel-module_Carousel__XzW0N Carousel-module_Carousel--swipable__YldeI"
            data-testid="carousel"
          >
            <div
              style="overflow-x: hidden;"
            >
              <div
                class="react-swipeable-view-container"
                style="flex-direction: row; transition: all 0s ease 0s; direction: ltr; display: flex; will-change: transform;"
              >
                <div
                  aria-hidden="false"
                  class="Carousel__slide--global"
                  data-swipeable="true"
                  style="width: 100%; flex-shrink: 0; overflow: auto;"
                >
                  <div
                    class="Carousel-module_page__zUQNj"
                  >
                    <div
                      class="Carousel-module_slide__7h-hP slide"
                      style="width: 100%;"
                    >
                      <div>
                        <div
                          class="mediaHeader"
                        >
                          <h6
                            class="MuiTypography-root mediaTitle Typography-module_Typography__aA2Zb MuiTypography-subtitle2 MuiTypography-displayBlock"
                          >
                            test-title-2
                          </h6>
                          <button
                            class="MuiButtonBase-root MuiButton-root buttonStyles-root-86 MuiButton-contained buttonStyles-contained-88 MuiButton-containedPrimary"
                            data-testid="download-button"
                            tabindex="0"
                            type="button"
                          >
                            <span
                              class="MuiButton-label buttonStyles-label-89"
                            >
                              <span
                                class="MuiButton-startIcon buttonStyles-startIcon-90 MuiButton-iconSizeMedium"
                              >
                                <svg
                                  aria-hidden="true"
                                  class="MuiSvgIcon-root"
                                  focusable="false"
                                  viewBox="0 0 24 24"
                                >
                                  <path
                                    d="M19 9h-4V3H9v6H5l7 7 7-7zM5 18v2h14v-2H5z"
                                  />
                                </svg>
                              </span>
                              Download
                            </span>
                            <span
                              class="MuiTouchRipple-root"
                            />
                          </button>
                        </div>
                        <img
                          alt="test-description-2"
                          class="image"
                          src="test-fileUrl.jpg"
                        />
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <button
          class="MuiButtonBase-root MuiIconButton-root iconButtonStyles-root-97 iconButtonStyles-medium-103 iconButtonStyles-text-99 carouselControl carouselControl--previous"
          data-testid="carousel-prev-button"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiIconButton-label"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root arrow"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M15.41 16.59L10.83 12l4.58-4.59L14 6l-6 6 6 6 1.41-1.41z"
              />
            </svg>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
        <button
          class="MuiButtonBase-root MuiIconButton-root iconButtonStyles-root-97 iconButtonStyles-medium-103 iconButtonStyles-text-99 carouselControl carouselControl--next"
          data-testid="carousel-next-button"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiIconButton-label"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root arrow"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M8.59 16.59L13.17 12 8.59 7.41 10 6l6 6-6 6-1.41-1.41z"
              />
            </svg>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </div>
    </div>
    <div
      data-test="sentinelEnd"
      tabindex="0"
    />
  </div>
</body>
`;

exports[`MediaGallery should preview as bmi icon if url is empty 1`] = `
<body
  style="padding-right: 0px; overflow: hidden;"
>
  <div
    aria-hidden="true"
  />
  <div
    class=""
    role="presentation"
    style="position: fixed; z-index: 1300; right: 0px; bottom: 0px; top: 0px; left: 0px;"
  >
    <div
      aria-hidden="true"
      class="backdrop"
      style="z-index: -1; position: fixed; right: 0px; bottom: 0px; top: 0px; left: 0px; background-color: rgba(0, 0, 0, 0.5);"
    />
    <div
      data-test="sentinelStart"
      tabindex="0"
    />
    <div
      class="ColorPair-module_ColorPair__-7yq5 ColorPair-module_ColorPair--white__ON4XF"
      style="opacity: 1; webkit-transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
      tabindex="-1"
    >
      <div
        class="Dialog-module_Dialog__mjp2p Dialog-module_Dialog--bg-white__VB5k7 Dialog-module_Dialog--width-lg__B9QT4 modal makeStyles-paper-43"
      >
        <div
          class="Dialog-module_header__-B9IJ"
        >
          <button
            aria-label="Close"
            class="MuiButtonBase-root MuiIconButton-root iconButtonStyles-root-55 iconButtonStyles-medium-61 iconButtonStyles-text-57 Dialog-module_iconButton__hWdbD"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiIconButton-label"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
                />
              </svg>
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
        </div>
        <div
          class="Carousel-module_wrapper__PjLbh"
        >
          <div
            class="Carousel-module_Carousel__XzW0N Carousel-module_Carousel--swipable__YldeI"
            data-testid="carousel"
          >
            <div
              style="overflow-x: hidden;"
            >
              <div
                class="react-swipeable-view-container"
                style="flex-direction: row; transition: all 0s ease 0s; direction: ltr; display: flex; will-change: transform;"
              >
                <div
                  aria-hidden="false"
                  class="Carousel__slide--global"
                  data-swipeable="true"
                  style="width: 100%; flex-shrink: 0; overflow: auto;"
                >
                  <div
                    class="Carousel-module_page__zUQNj"
                  >
                    <div
                      class="Carousel-module_slide__7h-hP slide"
                      style="width: 100%;"
                    >
                      <div>
                        <div
                          class="mediaHeader"
                        >
                          <h6
                            class="MuiTypography-root mediaTitle Typography-module_Typography__aA2Zb MuiTypography-subtitle2 MuiTypography-displayBlock"
                          >
                            test-title
                          </h6>
                          <button
                            class="MuiButtonBase-root MuiButton-root buttonStyles-root-44 MuiButton-contained buttonStyles-contained-46 MuiButton-containedPrimary"
                            data-testid="download-button"
                            tabindex="0"
                            type="button"
                          >
                            <span
                              class="MuiButton-label buttonStyles-label-47"
                            >
                              <span
                                class="MuiButton-startIcon buttonStyles-startIcon-48 MuiButton-iconSizeMedium"
                              >
                                <svg
                                  aria-hidden="true"
                                  class="MuiSvgIcon-root"
                                  focusable="false"
                                  viewBox="0 0 24 24"
                                >
                                  <path
                                    d="M19 9h-4V3H9v6H5l7 7 7-7zM5 18v2h14v-2H5z"
                                  />
                                </svg>
                              </span>
                              Download
                            </span>
                            <span
                              class="MuiTouchRipple-root"
                            />
                          </button>
                        </div>
                        <svg
                          color="primary"
                          data-testid="bmi-icon"
                          viewBox="0 0 250 250"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M0 0h250v250H0z"
                            fill="#009fe3"
                          />
                          <g
                            fill="#fff"
                          >
                            <path
                              d="M155.393 86.416 144.565 131h-.212l-10.829-44.584H100.3v50.634c-.76-9.718-6.732-14.589-13.079-16.771 5.626-3.078 9.342-7.218 9.342-14.862 0-7.749-4.247-19-24.2-19H30.848v75.8h42.994c12.786 0 25.368-7.183 26.455-21.075v21.075h22.081V113.6h.212l13.164 48.62h17.41l13.163-48.62h.213v48.62h22.081v-75.8ZM54.2 104.461h12.317c4.777 0 7.962 1.381 7.962 5.2 0 4.884-3.079 6.264-7.962 6.264H54.2Zm13.694 39.7H54.2v-14.115h14.652c5.521 0 8.174 2.442 8.174 6.9 0 5.839-4.246 7.219-9.126 7.219ZM195.798 86.416h23.355v75.797h-23.355z"
                            />
                          </g>
                        </svg>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <button
          class="MuiButtonBase-root MuiIconButton-root iconButtonStyles-root-55 iconButtonStyles-medium-61 iconButtonStyles-text-57 carouselControl carouselControl--previous"
          data-testid="carousel-prev-button"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiIconButton-label"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root arrow"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M15.41 16.59L10.83 12l4.58-4.59L14 6l-6 6 6 6 1.41-1.41z"
              />
            </svg>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
        <button
          class="MuiButtonBase-root MuiIconButton-root iconButtonStyles-root-55 iconButtonStyles-medium-61 iconButtonStyles-text-57 carouselControl carouselControl--next"
          data-testid="carousel-next-button"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiIconButton-label"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root arrow"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M8.59 16.59L13.17 12 8.59 7.41 10 6l6 6-6 6-1.41-1.41z"
              />
            </svg>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </div>
    </div>
    <div
      data-test="sentinelEnd"
      tabindex="0"
    />
  </div>
</body>
`;

exports[`MediaGallery should preview as url if any 1`] = `
<body
  style="padding-right: 0px; overflow: hidden;"
>
  <div
    aria-hidden="true"
  />
  <div
    class=""
    role="presentation"
    style="position: fixed; z-index: 1300; right: 0px; bottom: 0px; top: 0px; left: 0px;"
  >
    <div
      aria-hidden="true"
      class="backdrop"
      style="z-index: -1; position: fixed; right: 0px; bottom: 0px; top: 0px; left: 0px; background-color: rgba(0, 0, 0, 0.5);"
    />
    <div
      data-test="sentinelStart"
      tabindex="0"
    />
    <div
      class="ColorPair-module_ColorPair__-7yq5 ColorPair-module_ColorPair--white__ON4XF"
      style="opacity: 1; webkit-transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
      tabindex="-1"
    >
      <div
        class="Dialog-module_Dialog__mjp2p Dialog-module_Dialog--bg-white__VB5k7 Dialog-module_Dialog--width-lg__B9QT4 modal makeStyles-paper-22"
      >
        <div
          class="Dialog-module_header__-B9IJ"
        >
          <button
            aria-label="Close"
            class="MuiButtonBase-root MuiIconButton-root iconButtonStyles-root-34 iconButtonStyles-medium-40 iconButtonStyles-text-36 Dialog-module_iconButton__hWdbD"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiIconButton-label"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
                />
              </svg>
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
        </div>
        <div
          class="Carousel-module_wrapper__PjLbh"
        >
          <div
            class="Carousel-module_Carousel__XzW0N Carousel-module_Carousel--swipable__YldeI"
            data-testid="carousel"
          >
            <div
              style="overflow-x: hidden;"
            >
              <div
                class="react-swipeable-view-container"
                style="flex-direction: row; transition: all 0s ease 0s; direction: ltr; display: flex; will-change: transform;"
              >
                <div
                  aria-hidden="false"
                  class="Carousel__slide--global"
                  data-swipeable="true"
                  style="width: 100%; flex-shrink: 0; overflow: auto;"
                >
                  <div
                    class="Carousel-module_page__zUQNj"
                  >
                    <div
                      class="Carousel-module_slide__7h-hP slide"
                      style="width: 100%;"
                    >
                      <div>
                        <div
                          class="mediaHeader"
                        >
                          <h6
                            class="MuiTypography-root mediaTitle Typography-module_Typography__aA2Zb MuiTypography-subtitle2 MuiTypography-displayBlock"
                          >
                            test-title-2
                          </h6>
                          <button
                            class="MuiButtonBase-root MuiButton-root buttonStyles-root-23 MuiButton-contained buttonStyles-contained-25 MuiButton-containedPrimary"
                            data-testid="download-button"
                            tabindex="0"
                            type="button"
                          >
                            <span
                              class="MuiButton-label buttonStyles-label-26"
                            >
                              <span
                                class="MuiButton-startIcon buttonStyles-startIcon-27 MuiButton-iconSizeMedium"
                              >
                                <svg
                                  aria-hidden="true"
                                  class="MuiSvgIcon-root"
                                  focusable="false"
                                  viewBox="0 0 24 24"
                                >
                                  <path
                                    d="M19 9h-4V3H9v6H5l7 7 7-7zM5 18v2h14v-2H5z"
                                  />
                                </svg>
                              </span>
                              Download
                            </span>
                            <span
                              class="MuiTouchRipple-root"
                            />
                          </button>
                        </div>
                        <img
                          alt="test-description-2"
                          class="image"
                          src="test-fileUrl.jpg"
                        />
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <button
          class="MuiButtonBase-root MuiIconButton-root iconButtonStyles-root-34 iconButtonStyles-medium-40 iconButtonStyles-text-36 carouselControl carouselControl--previous"
          data-testid="carousel-prev-button"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiIconButton-label"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root arrow"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M15.41 16.59L10.83 12l4.58-4.59L14 6l-6 6 6 6 1.41-1.41z"
              />
            </svg>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
        <button
          class="MuiButtonBase-root MuiIconButton-root iconButtonStyles-root-34 iconButtonStyles-medium-40 iconButtonStyles-text-36 carouselControl carouselControl--next"
          data-testid="carousel-next-button"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiIconButton-label"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root arrow"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M8.59 16.59L13.17 12 8.59 7.41 10 6l6 6-6 6-1.41-1.41z"
              />
            </svg>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </div>
    </div>
    <div
      data-test="sentinelEnd"
      tabindex="0"
    />
  </div>
</body>
`;

exports[`MediaGallery should preview as vimeo if type vimeo 1`] = `
<body
  style="padding-right: 0px; overflow: hidden;"
>
  <div
    aria-hidden="true"
  />
  <div
    class=""
    role="presentation"
    style="position: fixed; z-index: 1300; right: 0px; bottom: 0px; top: 0px; left: 0px;"
  >
    <div
      aria-hidden="true"
      class="backdrop"
      style="z-index: -1; position: fixed; right: 0px; bottom: 0px; top: 0px; left: 0px; background-color: rgba(0, 0, 0, 0.5);"
    />
    <div
      data-test="sentinelStart"
      tabindex="0"
    />
    <div
      class="ColorPair-module_ColorPair__-7yq5 ColorPair-module_ColorPair--white__ON4XF"
      style="opacity: 1; webkit-transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
      tabindex="-1"
    >
      <div
        class="Dialog-module_Dialog__mjp2p Dialog-module_Dialog--bg-white__VB5k7 Dialog-module_Dialog--width-lg__B9QT4 modal makeStyles-paper-64"
      >
        <div
          class="Dialog-module_header__-B9IJ"
        >
          <button
            aria-label="Close"
            class="MuiButtonBase-root MuiIconButton-root iconButtonStyles-root-76 iconButtonStyles-medium-82 iconButtonStyles-text-78 Dialog-module_iconButton__hWdbD"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiIconButton-label"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
                />
              </svg>
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
        </div>
        <div
          class="Carousel-module_wrapper__PjLbh"
        >
          <div
            class="Carousel-module_Carousel__XzW0N Carousel-module_Carousel--swipable__YldeI"
            data-testid="carousel"
          >
            <div
              style="overflow-x: hidden;"
            >
              <div
                class="react-swipeable-view-container"
                style="flex-direction: row; transition: all 0s ease 0s; direction: ltr; display: flex; will-change: transform;"
              >
                <div
                  aria-hidden="false"
                  class="Carousel__slide--global"
                  data-swipeable="true"
                  style="width: 100%; flex-shrink: 0; overflow: auto;"
                >
                  <div
                    class="Carousel-module_page__zUQNj"
                  >
                    <div
                      class="Carousel-module_slide__7h-hP slide"
                      style="width: 100%;"
                    >
                      <div>
                        <div
                          class="mediaHeader"
                        >
                          <h6
                            class="MuiTypography-root mediaTitle Typography-module_Typography__aA2Zb MuiTypography-subtitle2 MuiTypography-displayBlock"
                          >
                            test-title-3
                          </h6>
                        </div>
                        <div>
                          <div
                            class="iframeBackground"
                          >
                            <svg
                              color="primary"
                              style="height: 360px;"
                              viewBox="0 0 250 250"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                d="M0 0h250v250H0z"
                                fill="#009fe3"
                              />
                              <g
                                fill="#fff"
                              >
                                <path
                                  d="M155.393 86.416 144.565 131h-.212l-10.829-44.584H100.3v50.634c-.76-9.718-6.732-14.589-13.079-16.771 5.626-3.078 9.342-7.218 9.342-14.862 0-7.749-4.247-19-24.2-19H30.848v75.8h42.994c12.786 0 25.368-7.183 26.455-21.075v21.075h22.081V113.6h.212l13.164 48.62h17.41l13.163-48.62h.213v48.62h22.081v-75.8ZM54.2 104.461h12.317c4.777 0 7.962 1.381 7.962 5.2 0 4.884-3.079 6.264-7.962 6.264H54.2Zm13.694 39.7H54.2v-14.115h14.652c5.521 0 8.174 2.442 8.174 6.9 0 5.839-4.246 7.219-9.126 7.219ZM195.798 86.416h23.355v75.797h-23.355z"
                                />
                              </g>
                            </svg>
                          </div>
                          <iframe
                            allow="autoplay; fullscreen; picture-in-picture"
                            allowfullscreen=""
                            class="iframe"
                            frameborder="0"
                            height="360"
                            src="https://player.vimeo.com/video/test-videolink"
                            width="640"
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <button
          class="MuiButtonBase-root MuiIconButton-root iconButtonStyles-root-76 iconButtonStyles-medium-82 iconButtonStyles-text-78 carouselControl carouselControl--previous"
          data-testid="carousel-prev-button"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiIconButton-label"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root arrow"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M15.41 16.59L10.83 12l4.58-4.59L14 6l-6 6 6 6 1.41-1.41z"
              />
            </svg>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
        <button
          class="MuiButtonBase-root MuiIconButton-root iconButtonStyles-root-76 iconButtonStyles-medium-82 iconButtonStyles-text-78 carouselControl carouselControl--next"
          data-testid="carousel-next-button"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiIconButton-label"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root arrow"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M8.59 16.59L13.17 12 8.59 7.41 10 6l6 6-6 6-1.41-1.41z"
              />
            </svg>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </div>
    </div>
    <div
      data-test="sentinelEnd"
      tabindex="0"
    />
  </div>
</body>
`;

exports[`MediaGallery should render component 1`] = `
<body
  style="padding-right: 0px; overflow: hidden;"
>
  <div
    aria-hidden="true"
  />
  <div
    class=""
    role="presentation"
    style="position: fixed; z-index: 1300; right: 0px; bottom: 0px; top: 0px; left: 0px;"
  >
    <div
      aria-hidden="true"
      class="backdrop"
      style="z-index: -1; position: fixed; right: 0px; bottom: 0px; top: 0px; left: 0px; background-color: rgba(0, 0, 0, 0.5);"
    />
    <div
      data-test="sentinelStart"
      tabindex="0"
    />
    <div
      class="ColorPair-module_ColorPair__-7yq5 ColorPair-module_ColorPair--white__ON4XF"
      style="opacity: 1; webkit-transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
      tabindex="-1"
    >
      <div
        class="Dialog-module_Dialog__mjp2p Dialog-module_Dialog--bg-white__VB5k7 Dialog-module_Dialog--width-lg__B9QT4 modal makeStyles-paper-1"
      >
        <div
          class="Dialog-module_header__-B9IJ"
        >
          <button
            aria-label="Close"
            class="MuiButtonBase-root MuiIconButton-root iconButtonStyles-root-13 iconButtonStyles-medium-19 iconButtonStyles-text-15 Dialog-module_iconButton__hWdbD"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiIconButton-label"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
                />
              </svg>
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
        </div>
        <div
          class="Carousel-module_wrapper__PjLbh"
        >
          <div
            class="Carousel-module_Carousel__XzW0N Carousel-module_Carousel--swipable__YldeI"
            data-testid="carousel"
          >
            <div
              style="overflow-x: hidden;"
            >
              <div
                class="react-swipeable-view-container"
                style="flex-direction: row; transition: all 0s ease 0s; direction: ltr; display: flex; will-change: transform;"
              >
                <div
                  aria-hidden="false"
                  class="Carousel__slide--global"
                  data-swipeable="true"
                  style="width: 100%; flex-shrink: 0; overflow: auto;"
                >
                  <div
                    class="Carousel-module_page__zUQNj"
                  >
                    <div
                      class="Carousel-module_slide__7h-hP slide"
                      style="width: 100%;"
                    >
                      <div>
                        <div
                          class="mediaHeader"
                        >
                          <h6
                            class="MuiTypography-root mediaTitle Typography-module_Typography__aA2Zb MuiTypography-subtitle2 MuiTypography-displayBlock"
                          >
                            test-title
                          </h6>
                          <button
                            class="MuiButtonBase-root MuiButton-root buttonStyles-root-2 MuiButton-contained buttonStyles-contained-4 MuiButton-containedPrimary"
                            data-testid="download-button"
                            tabindex="0"
                            type="button"
                          >
                            <span
                              class="MuiButton-label buttonStyles-label-5"
                            >
                              <span
                                class="MuiButton-startIcon buttonStyles-startIcon-6 MuiButton-iconSizeMedium"
                              >
                                <svg
                                  aria-hidden="true"
                                  class="MuiSvgIcon-root"
                                  focusable="false"
                                  viewBox="0 0 24 24"
                                >
                                  <path
                                    d="M19 9h-4V3H9v6H5l7 7 7-7zM5 18v2h14v-2H5z"
                                  />
                                </svg>
                              </span>
                              Download
                            </span>
                            <span
                              class="MuiTouchRipple-root"
                            />
                          </button>
                        </div>
                        <svg
                          color="primary"
                          data-testid="bmi-icon"
                          viewBox="0 0 250 250"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M0 0h250v250H0z"
                            fill="#009fe3"
                          />
                          <g
                            fill="#fff"
                          >
                            <path
                              d="M155.393 86.416 144.565 131h-.212l-10.829-44.584H100.3v50.634c-.76-9.718-6.732-14.589-13.079-16.771 5.626-3.078 9.342-7.218 9.342-14.862 0-7.749-4.247-19-24.2-19H30.848v75.8h42.994c12.786 0 25.368-7.183 26.455-21.075v21.075h22.081V113.6h.212l13.164 48.62h17.41l13.163-48.62h.213v48.62h22.081v-75.8ZM54.2 104.461h12.317c4.777 0 7.962 1.381 7.962 5.2 0 4.884-3.079 6.264-7.962 6.264H54.2Zm13.694 39.7H54.2v-14.115h14.652c5.521 0 8.174 2.442 8.174 6.9 0 5.839-4.246 7.219-9.126 7.219ZM195.798 86.416h23.355v75.797h-23.355z"
                            />
                          </g>
                        </svg>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <button
          class="MuiButtonBase-root MuiIconButton-root iconButtonStyles-root-13 iconButtonStyles-medium-19 iconButtonStyles-text-15 carouselControl carouselControl--previous"
          data-testid="carousel-prev-button"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiIconButton-label"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root arrow"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M15.41 16.59L10.83 12l4.58-4.59L14 6l-6 6 6 6 1.41-1.41z"
              />
            </svg>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
        <button
          class="MuiButtonBase-root MuiIconButton-root iconButtonStyles-root-13 iconButtonStyles-medium-19 iconButtonStyles-text-15 carouselControl carouselControl--next"
          data-testid="carousel-next-button"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiIconButton-label"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root arrow"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M8.59 16.59L13.17 12 8.59 7.41 10 6l6 6-6 6-1.41-1.41z"
              />
            </svg>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </div>
    </div>
    <div
      data-test="sentinelEnd"
      tabindex="0"
    />
  </div>
</body>
`;
